# math_rag

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Makefile  README.md  analyze_atomic_unit_lengths.py  compare_embeddings.py  direct_vector_search.py  docker-compose.yml  improvement_plan.md  pyproject.toml  requirements.in  requirements.txt  revised_improvement_plan.md
.github/: copilot_instructions.md
.github/workflows/: test_and_lint.yaml
config/: agents.yaml  config.yaml  prompts.yaml
docs/: section_headers.yaml
notebooks/: Untitled.ipynb  pdf-chat.ipynb
requirements/: base.in  base.txt  dev.in  dev.txt
scripts/: analyze_atomic_unit_lengths.py  calc_embedding_similarity.py  compare_embeddings.py  direct_vector_search.py  test_cypher_tools.py  test_graph_meta.py
src/: Home.py  README_tutorial.md  app.py  build_knowledge_graph.py  config.py  create_kg.py  create_kg_naive.py  create_kg_regex.py  create_kg_sections.py  document_processing.py  extract_atomic_units.py  graph_rag.py  hierarchical_parser.py  pdf_to_text.py  prompts.py  rag_chatbot.py  rag_tutorial_app.py  section_headers.py  section_splitter.py  smolagents_rag.py  split_into_subsections.py  subsection_splitter.py
src/math_rag/: __init__.py  add_embeddings.py  atomic_unit.py  build_knowledge_graph.py  create_embeddings_and_vector_index.py  create_graph.py  extract_atomic_units.py  graph_rag_math.py  pdf_to_text.py  project_root.py  retrievers.py  sanity_checks.py  section_headers.py  section_splitter.py
src/math_rag/cli/: db_cli.py  dspy_rag_cli.py  extract_refs_cli.py  graph_rag_cli.py  kg_cli.py  translate_atoms.py  view_summaries_cli.py
src/math_rag/config/: __init__.py  settings.py
src/math_rag/core/: __init__.py  atomic_item.py  atomic_unit.py  db_models.py  llm_annotations.py  llm_processor.py  llm_utils.py  (+1 more)
src/pages/: 1_Chunking.py  2_Embeddings.py  3_Retrievers.py
src/rag_chat/: config.py  document_processing.py  embeddings.py  llm_utils.py  prompts.py  rag_chatbot.py  retrievers.py
tests/: test_atomic_unit.py  test_pdf_to_text.py  test_rag_chatbot.py  test_section_headers.py
(+44 files in other folders)
