[build-system]
requires = ["setuptools>64", "wheel"]
build_backend = ["setuptools.build_meta"]

[project]
name = "math_rag"
version = "0.1.0"
description = "GraphRAG for Mathematical Documents"
readme = "README.md"
authors = [
    { name = "Kai Jennissen", email = "k_jennissen@icloud.com" }
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line_length = 88

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
