[build-system]
requires = ["setuptools>64", "wheel"]
build_backend = "setuptools.build_meta"

[project]
name = "math_rag"
version = "0.1.0"
description = "GraphRAG for Mathematical Documents"
readme = "README.md"
authors = [
    { name = "Kai Jennissen" }
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "coloredlogs",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "langchain-neo4j",
    "langgraph",
    "pandas",
    "python-dotenv",
    "pypdf",
    "pymupdf",
    "rich",
    "scikit-learn",
    "smolagents[mcp]",
    "sqlmodel",
    "streamlit",
    "tabulate",
    "watchdog",
    "pyyaml",
    "detect-secrets>=1.5.0",
    "langchain-huggingface>=0.3.1",
    "sentence-transformers>=5.1.1",
    "mcp>=1.14.1",
    "ty>=0.0.1a21",
    "pyrefly>=0.34.0",
    "zuban>=0.0.24",
    "mypy>=1.18.2",
    "dspy>=3.0.3",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
